@@ -459,6 +459,11 @@ specifier|private
 name|String
 name|cookiePath
 decl_stmt|;
+DECL|field|isInitializedByTomcat
+specifier|private
+name|boolean
+name|isInitializedByTomcat
+decl_stmt|;
 comment|/**    *<p>Initializes the authentication filter and signer secret provider.</p>    * It instantiates and initializes the specified {@link    * AuthenticationHandler}.    *    * @param filterConfig filter configuration.    *    * @throws ServletException thrown if the filter or the authentication handler could not be initialized properly.    */
 annotation|@
 name|Override
@@ -790,6 +795,10 @@ name|config
 argument_list|,
 literal|false
 argument_list|)
+expr_stmt|;
+name|isInitializedByTomcat
+operator|=
+literal|true
 expr_stmt|;
 block|}
 catch|catch
@@ -1204,6 +1213,25 @@ name|destroy
 argument_list|()
 expr_stmt|;
 name|authHandler
+operator|=
+literal|null
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|secretProvider
+operator|!=
+literal|null
+operator|&&
+name|isInitializedByTomcat
+condition|)
+block|{
+name|secretProvider
+operator|.
+name|destroy
+argument_list|()
+expr_stmt|;
+name|secretProvider
 operator|=
 literal|null
 expr_stmt|;
